tests/NormalTests/paczka1/fuzzy1/31542941.err
Error in line 10: iexlAG9XO3V A639 69,57
Error in line 6: BCSzpVOXkOd A84 57,6
Error in line 24: FZuWbzvd A84 29,4
Error in line 27: FZuWbzvd S502 60,3
Error in line 17: iexlAG9XO3V A639 229,3
